--- a/survey_form.css
+++ b/survey_form.css
@@ -1,18 +1,15 @@
+/* FIXED CSS */
 * {
     margin: 0px;
     padding: 0px;
     font-family: 'Mukta', sans-serif;
 }
 
-label {
-    font-weight: bold;
-}
-
 input {
     border-top: none;
-    border-left: none;
     border-right: none;
     border-bottom: 1px solid lightgray;
+    border-left: none;
     outline: none;
     width: 50%;
 }
@@ -20,7 +17,6 @@ input {
 button {
     height: 40px;
     width: 100px;
-    font-size: 15px;
     color: white;
     background-color: red;
     border: 1px solid red;
@@ -28,20 +24,54 @@ button {
     outline: none;
 }
 
-select, option, button {
+label, select, option, button, .pageTwo {
     font-weight: bold;
 }
 
 textarea {
-    width: 800px;
+    width: 500px;
+    border-radius: 15px;
+    border: 1px solid lightgray;
     padding: 20px;
+    outline: none;
 }
 
-.main {
+/* COMBINED CSS */
+.main, .pageTwo {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.design, .header, .form, .formMed, .formLong {
+    background-color: white;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    margin-bottom: 15px;
+    width: 48%;
+}
+
+.headerTitle, .headerBody, .required, .form, .formMed, .formLong {
+    padding-left: 30px;
+}
+
+.headerBody, .required, button {
+    font-size: 15px;
+}
+
+.form, .formMed, .formLong, .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-evenly;
+}
+
+.red {
+    color: red;
+}
+
+.main {
     padding: 15px;
 }
 
@@ -49,128 +79,90 @@ textarea {
     background-image: url(background.jpeg);
     background-position: center;
     background-size: contain;
-    border: 1px solid lightgray;
-    border-radius: 10px;
     height: 160px;
-    width: 50%;
-    margin-bottom: 15px;
+    width: 50%;   
 }
 
-.title {
+/* HEADER */
+.header {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 10px;
     height: 130px;
     width: 50%;
     overflow: hidden;
-    margin-bottom: 15px;
 }
 
-.titleDesign {
+.headerDes {
     height: 10%;
     width: 100%;
     background-color: red;
 }
 
-.titleHeader {
+.headerTitle {
     font-size: 35px;
-    padding-left: 30px;
 }
 
-.titleBody {
-    font-size: 15px;
-    padding-left: 30px;
+.required {
+    padding-bottom: 10px;
 }
 
-.alert {
-    color: red;
-    font-size: 15px;
-    padding: 0px 0px 10px 30px;
-}
-
+/* FORMS */
 .form {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 10px;
     height: 100px;
-    width: 48%;
-    margin-bottom: 15px;
-    padding-left: 30px;
 }
 
 .formMed {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 10px;
     height: 160px;
-    width: 48%;
-    margin-bottom: 15px;
-    padding-left: 30px;
 }
 
 .formLong {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 10px;
-    height: 350px;
-    width: 48%;
-    margin-bottom: 15px;
-    padding-left: 30px;
+    height: 250px;
 }
 
+/* CHECKBOX */
 .checkboxCon {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 270px;
-    /* border-style: solid;
-    border-color: red; */
+    height: 200px;
 }
 
 .checkbox {
-    height: 30px;
-    width: 270px;
-    /* border-style: solid;
-    border-color: red; */
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    height: 20px;
+    width: 260px;
 }
 
 .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    /* background-color: white;
-    border: 1px solid lightgray;
-    border-radius: 10px; */
     height: 280px;
     width: 50%;
 }
 
-.red {
-    color: red;
-}
-
 .footerNDA {
     font-style: italic;
-    font-size: 14px;
+    font-size: 13px;
+}
+
+/* PAGE 2 */
+.pageTwo {
+    height: 45vw;
+    width: 100%;
+    background-color: red;
+    color: white;
+    font-size: 50px;
+}
+
+.register {
+    height: 40px;
+    width: 100px;
+    color: white;
+    background-color: red;
+    border: 2px solid white;
+    border-radius: 10px;
+    outline: none;
 }
